--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,10 @@
 			<option class="format2">mm/dd/yyyy</option>
 			<option class="format3">yyyy/dd/mm</option>
 		</select>
+		<br>
+		<select class="dateDropdown">
+			<option/>
+		</select>
 	</div>
 
 </body>
